# jni-binding-generator

./: .clang-format  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
docs/: JNI_BINDING_GENERATOR_PLAN.md  advanced-usage.md  memory-management.md  type-support-matrix.md  unit-testing.md
examples/android-binding/: CMakeLists.txt  README.md  build.gradle.kts  gradlew.bat  settings.gradle.kts
examples/android-binding/include/: image_classifier.h
examples/android-binding/src/: ImageClassifier.kt
examples/android-binding/src/main/cpp/: CMakeLists.txt  native_impl.cpp
examples/android-binding/src/main/kotlin/com/example/myapp/: NativeBridge.kt
examples/kmp-binding/: .gitignore  README.md  gradlew  settings.gradle.kts
examples/kmp-binding/androidApp/: build.gradle.kts
examples/kmp-binding/androidApp/src/main/: AndroidManifest.xml
examples/kmp-binding/androidApp/src/main/cpp/: CMakeLists.txt
examples/kmp-binding/androidApp/src/main/kotlin/com/example/kmmbinding/android/: MainActivity.kt
examples/kmp-binding/build-logic/: settings.gradle.kts
examples/kmp-binding/desktopApp/: build.gradle.kts
examples/kmp-binding/desktopApp/src/desktopMain/kotlin/com/example/kmmbinding/desktop/: Main.kt
examples/kmp-binding/desktopApp/src/jvmMain/cpp/: CMakeLists.txt
examples/kmp-binding/gradle/: libs.versions.toml
examples/kmp-binding/iosApp/: README.md
examples/kmp-binding/iosApp/src/nativeInterop/cinterop/: NativeBridgeJni.def
examples/kmp-binding/iosApp/src/nativeInterop/cinterop/include/: NativeBridgeJni.h
examples/kmp-binding/shared/: build.gradle.kts
examples/kmp-binding/shared/src/androidMain/kotlin/com/example/kmmbinding/: NativeBridge.android.kt  NativeBridgeJni.kt
examples/kmp-binding/shared/src/commonMain/kotlin/com/example/kmmbinding/: NativeBridge.kt
examples/kmp-binding/shared/src/desktopMain/kotlin/com/example/kmmbinding/: NativeBridge.desktop.kt  NativeBridgeJni.kt
examples/kmp-binding/shared/src/iosMain/kotlin/com/example/kmmbinding/: NativeBridge.ios.kt
examples/kmp-binding/shared/src/jvmMain/kotlin/com/example/kmmbinding/: NativeBridge.jvm.kt
examples/sample-binding/: README.md  SampleEngine.kt
gradle-integration/: README.md
gradle-integration/build-logic/convention/: build.gradle.kts
gradle-integration/build-logic/convention/src/main/kotlin/: jni-generator.gradle.kts
scripts/: __init__.py  _driver.py  _generator.py  _ios.py  _kotlin_gen.py  _models.py  _parser.py  _scorer.py  _types.py  jni-binding-generator.py  jni-utils.h
scripts/tests/: test_driver.py  test_generator.py  test_integration.py  test_kotlin_gen.py  test_memory.py  test_parser.py
