[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jni-binding-generator"
version = "1.4.6"
description = "Generate C++ JNI boilerplate from Kotlin external fun declarations"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["jni", "kotlin", "android", "codegen", "native", "kmp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
jni-binding-generator = "jni_binding_generator:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.hatch.build.targets.wheel.sources]
"scripts" = "jni_binding_generator"

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
